nivasa-macros/tests/trybuild/on_event_invalid_guard_marker.stderr
error: invalid guard marker
 --> tests/trybuild/on_event_invalid_guard_marker.rs:6:5
  |
6 |     /// nivasa-guard:
  |     ^^^^^^^^^^^^^^^^^
